--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,12 @@
 
 * {
   margin: 0;
-  padding: 0;
+  padding: 0rem;
   box-sizing: border-box;
-  background-color: rgb(0, 0, 0);
   font-family: "Montserrat", sans-serif;
   font-weight: 300;
+}
+
+.pageWrapper {
+  background-color: #000;
 }
