--- a/src/components/Tracks/Tracks.module.css
+++ b/src/components/Tracks/Tracks.module.css
@@ -1,7 +1,13 @@
 .dataOverlay,
 .dataName,
-.dataLink {
+.dataLink,
+.dataWrapper {
   background-color: transparent;
+}
+
+.dataWrapper {
+  border: 1px #444444 solid;
+  padding: 1rem;
 }
 
 .dataOverlay {
@@ -9,11 +15,18 @@
   flex-direction: column;
   color: #fff;
   text-transform: uppercase;
-  gap: 1rem;
+  gap: 2rem;
 }
 
 .dataName,
 .dataLink {
   margin: 0;
   padding: 5px;
+}
+
+.dataLink {
+  position: relative;
+  opacity: 0.5;
+  border-radius: 2%;
+  border: 2px solid transparent;
 }
