--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,500;0,700;1,300;1,500;1,700&display=swap");
 
+html {
+  overflow: auto;
+}
+
 * {
   margin: 0;
   padding: 0rem;
@@ -8,6 +12,17 @@
   font-weight: 300;
 }
 
-.pageWrapper {
+body {
   background-color: #000;
+}
+
+*::-webkit-scrollbar,
+*::-webkit-scrollbar-track,
+*::-webkit-scrollbar-thumb {
+  width: 0;
+}
+
+.pageWrapper {
+  margin: 1rem;
+  border: 1px #444444 solid;
 }
