--- a/src/components/Genre/Genre.module.css
+++ b/src/components/Genre/Genre.module.css
@@ -1,13 +1,20 @@
 .genreData {
   color: #fff;
-  position: relative;
-  display: flex;
-  gap: 1rem;
+  display: grid;
+  grid-template-columns: 70% 30%;
+  height: 100%;
+  min-height: 50vh;
+  max-height: 50vh;
+  border-bottom: 1px #444444 solid;
 }
 
 .video {
+  display: block;
   animation: backAndForth 15.25s linear infinite;
-  width: calc(70% - 1rem);
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  object-fit: cover;
 }
 
 @keyframes backAndForth {
@@ -29,13 +36,17 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  border: 1px #545454 solid;
-  padding: 1rem;
+  border-left: 1px #545454 solid;
+  padding: 1rem 0 1rem 1rem;
+  overflow-y: auto;
+  scrollbar-color: #000;
 }
 
 .genreName {
   text-transform: uppercase;
-  font-size: 5rem;
+  font-size: calc(3vw);
+  padding: 1rem;
+  margin-right: 1rem;
 }
 
 .genreWrapper,
