--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -2,80 +2,131 @@
   margin-top: 5rem;
   display: flex;
   justify-content: center;
-  gap: 5rem;
+  padding: 2rem;
 }
 
 .navList {
   display: flex;
   flex-direction: column;
+  width: 100%;
+  gap: 2rem;
 }
 
 .catalogLink,
 .aboutLink {
-  color: #fff;
+  color: #ffffff;
   text-decoration: none;
-  font-size: 3rem;
+  font-size: 2vw;
   letter-spacing: 1rem;
 }
 
-.navListCatalog {
+.aboutLink h2 {
+  font-size: 2vw;
+}
+
+.catalogHeaderWrapper {
   display: flex;
+  justify-content: center;
+  gap: 1vw;
+  position: relative;
+  text-align: center;
+}
+
+.catalogHeader {
+  font-size: 2vw;
+  color: #ffffff;
+  text-transform: uppercase;
+  letter-spacing: 1rem;
+  transition: transform 0.5s ease-in-out;
+}
+
+.catalogHeaderWrapper:hover .catalogHeader {
+  transform: translate(36%, 0);
+  transition: transform 0.5s ease-in-out;
+}
+
+.catalogHeaderText {
+  display: inline;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 52%;
+  transform: translate(-50%, -50%);
+  transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
+  color: rgb(101, 0, 0);
+}
+
+.catalogHeaderWrapper:hover .catalogHeaderText {
+  opacity: 1;
+  transform: translate(-150%, -50%);
+  left: 52%;
+}
+
+.navListCatalog {
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  text-align: center;
   flex-direction: column;
-  align-items: center;
   gap: 2rem;
+}
+
+.catalogSubheader {
+  font-size: 1vw;
+  color: #fff;
+  max-width: 60%;
+  margin: 0 auto;
+  text-transform: uppercase;
+}
+
+.catalogDescription {
+  font-size: 0.8vw;
+  color: #fff;
+  max-width: 60%;
+  margin: 0 auto;
+}
+
+.navListAbout {
+  display: flex;
+  justify-content: center;
 }
 
 .videoContainer {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 4rem;
 }
-
 .videoWrapper {
-  width: 100%;
-  height: 100%;
   display: flex;
+  justify-content: space-around;
   align-items: center;
-  transition: opacity 0.5s ease-in-out;
-  gap: 2rem;
+  top: 25rem;
+  opacity: 0.2;
+  transition: opacity 1s ease-in-out;
 }
 
 .genreWrapper {
-  position: relative;
   display: flex;
-  align-items: center;
-  transition: opacity 0.5s ease-in-out;
-}
-
-.active {
-  opacity: 1;
 }
 
 .video {
-  width: 20rem;
-  opacity: 0;
-  transition: opacity 0.5s ease-in-out;
-}
-
-.videoVisible {
-  opacity: 1;
+  width: 20vw;
 }
 
 .genreName {
-  opacity: 0;
+  font-size: 2vw;
   color: #fff;
-  transition: opacity 0.5s ease-in-out;
   order: -1;
-  text-orientation: upright;
-  writing-mode: vertical-lr;
   text-transform: uppercase;
+  padding: 1rem;
+  opacity: 0.5;
+  position: absolute;
 }
 
-.genreNameVisible {
+.fadeIn {
   opacity: 1;
 }
 
-.navListAbout {
-  margin-top: 2rem;
-  display: flex;
-  justify-content: center;
+.hidden {
+  opacity: 0.2;
 }
