--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -7,7 +7,7 @@
 .navbar {
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
   z-index: 1;
   width: 100%;
   min-height: 10vh;
@@ -89,8 +89,9 @@
 }
 
 .navLink {
+  margin-right: 1.5rem;
   text-decoration: none;
-  width: 13.5rem;
+  width: 12rem;
   height: 5rem;
   border: 1px solid #333;
   cursor: pointer;
@@ -113,12 +114,12 @@
 }
 
 .navLink::before {
-  width: 10rem;
+  width: 9rem;
   height: 5rem;
 }
 
 .navLink::after {
-  width: 13.5rem;
+  width: 12rem;
   height: 5rem;
 }
 
@@ -137,7 +138,7 @@
 }
 
 .navText {
-  font-size: 1.5vw;
+  font-size: 2rem;
   color: #fff;
   opacity: 70%;
   transition: opacity 0.5s ease-in-out;
